changed entityManager to JPARepository.